populate memory info in UI

--- a/app/src/main/res/layout/process_item_view_holder.xml
+++ b/app/src/main/res/layout/process_item_view_holder.xml
@@ -6,17 +6,32 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/appName"
+        android:id="@+id/app_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/processName"
+        android:id="@+id/process_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/pid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/total_private_dirty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/native_heap"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/java_heap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
